# libmini

./: ProjectHome.md
libmini/: CONTENTS  Doxyfile
libmini/CAR/: CAR.c  CARP.h  Makefile  OGL.c  OGL.h  OGLP.h  README  XWin.c  XWin.h  XWinP.h  data.c  data.h  dataP.h  defs.h  driver.c  driver.h  driverP.h  jpeg.c  jpeg.h  jpegP.h  landscape.h  landscape3.c  landscape3P.h  landscape4.c  landscape4P.h  menu.c  menu.h  menuP.h
libmini/FaceOfMars/: Makefile  faceofmars.cpp
libmini/Fraenkische/: CMakeLists.txt  Forest.ppm  Fraenkische-vc7.sln  Fraenkische-vc7.vcproj  Fraenkische-vc8.sln  Fraenkische-vc8.vcproj  Fraenkische.cpp  Fraenkische.sln  Fraenkische.vcproj  Makefile  MiniMakefile  README  Splash.txt  TreeRGB.ppm  TreesRGB.ppm  Waypoints.txt  build.sh  demo.sh  preprocess.sh
libmini/Stuttgart/: CMakeLists.txt  Makefile  Makefile.am  MiniMakefile  README  Stuttgart-vc7.sln  Stuttgart-vc7.vcproj  Stuttgart-vc8.sln  Stuttgart-vc8.vcproj  Stuttgart.cpp  Stuttgart.desktop  Stuttgart.sln  Stuttgart.vcproj  build.sh  configure.ac  freeglut_static.lib
libmini/Stuttgart/data/: Stuttgart.fly
libmini/Yukon/: CMakeLists.txt  Makefile  Makefile.am  MiniMakefile  README  Yukon-vc7.sln  Yukon-vc7.vcproj  Yukon-vc8.sln  Yukon-vc8.vcproj  Yukon.cpp  Yukon.desktop  Yukon.sln  Yukon.vcproj  autogen.sh  build.sh  configure.ac
libmini/mini/: CMakeLists.txt  LICENSE.txt  Makefile  Makefile.am  Mini.pc.in  MiniMakefile  README.html  autogen.sh  build.bat  build.sh  configure.ac  convbase.cpp  convbase.h  core.cpp  curlbase.cpp  curlbase.h  database.cpp  database.h  datacache.cpp  datacache.h  datacalc.cpp  datacloud.cpp  datacloud.h  dataconv.h  datafill.cpp  datafill.h  datagrid.cpp  datagrid.h  dataparse.cpp  dataparse.h  example-vc7.sln  example-vc7.vcproj  example-vc8.vcproj  example.cpp  geoid.cpp  geoid.h  glslmath.cpp  glslmath.h  glslmath.txt  greycbase.cpp  (+207 more)
libmini/mini/CMakeModules/: FindMINI.cmake
libmini/mini/OpenThreads/: Thread
libmini/mini/data/: Checker.db  Cone.db  EarthDay.db  EarthDay.ppm  EarthNight.db  Marble.db  Wood.db  std.luna
libmini/mini/example.cmake/: CMakeLists.txt
libmini/mini/example.cmake/CMakeModules/: FindMINI.cmake
libmini/mini/include/: std.luna
libmini/mini/qtviewer/: mainwindow.cpp  qtviewer.pro  renderer.cpp  renderer.h  viewerconst.h  viewerwindow.cpp  viewerwindow.h
libmini/mini/test/: CMakeLists.txt  fibo2.luna  testmini.cpp
libmini/mini/tools/: CMakeLists.txt  Makefile  Makefile.am  MiniMakefile  coord.cpp  db2db.cpp  dbdump.cpp  dbgzip.cpp  dds.cpp  eval.cpp  expr.cpp  geo2ply.cpp  modblack.sh  modgeotiff.sh  modwhite.sh  mpfptest.cpp  raw2db.cpp  raw2iso.cpp  rawquant.cpp  rek2raw.cpp  test.cpp  test.vcproj
libmini/plotter/: CMakeLists.txt  bounce.cpp  example.cpp  fern.cpp  julia.cpp  koch.cpp  plot.cpp  plot.h  plotter-config.cmake  plotter.cmake  scroll.cpp  spiral.cpp
libmini/plotter/demo/: CMakeLists.txt  automaton.cpp  bounce.cpp  fern.cpp  julia.cpp  kdtree.cpp  koch.cpp  scroll.cpp  spiral.cpp
libmini/pong/: CMakeLists.txt  Ping.desktop  Poing.desktop  Pong.desktop  README.txt  async_client.h  build.sh  cert.pem  client.cpp  client.h  clientui.cpp  clientui.h  daytime_server.h  key.pem  main.cpp  ping.cpp  ping.icns  poing.cpp  poing.icns  pong.cpp  pong.icns  pong.pro  relay_server.cpp  relay_server.h  server.cpp  server.h  serverui.cpp  serverui.h  sslclient.cpp  sslclient.h  ssldata.h  ssldatabase.cpp  ssldatabase.h  sslloop.cpp  sslloop.h  sslqueue.cpp  sslqueue.h  sslserver.cpp  sslserver.h  sslsocket.cpp  (+6 more)
libmini/pong/GPS-Spot/: GPS-Spot_harmattan.desktop
libmini/pong/android/: mainwindow.cpp
libmini/pong/boost/: async_client.cpp  async_client.h  build.sh  client.h  daytime_server.h  relay_server.cpp  relay_server.h  server.cpp  server.h
libmini/pong/qt/GPS-Spot/: GPS-Spot.desktop  GPS-Spot.pro  mainwindow.ui
libmini/qtviewer/: CMakeLists.txt  QTViewer.desktop  R.txt  README.TXT  README.txt  build.bat  build.sh  camera.cpp  camera.h  cameraconst.h  install.sh  landscape.h  landscape.pro  main.cpp  mainconst.h  mainwindow.cpp  mainwindow.h  nodes.cpp  nodes.h  object.cpp  object.h  objectlist.cpp  objectlist.h  objects.cpp  objects.h  qtviewer.pri  qtviewer.pro  renderer.cpp  renderer.h  renderer_control.cpp  renderer_overlay.cpp  sources.pro  viewer.cpp  viewer.h  viewerconst.h  viewerwindow.cpp  viewerwindow.h  worker.cpp  worker.h
libmini/qtviewer/CMakeModules/: FindGRID.cmake
libmini/qtviewer/data/textures/: Checker.db  Marble.db  Wood.db
libmini/qtviewer/data/trk/: test.csv
libmini/qtviewer/example.cmake/: CMakeLists.txt  example.cpp  mainwindow.cpp  mainwindow.h  renderer.h  viewer.cpp  viewerconst.h  viewerwindow.cpp  viewerwindow.h
libmini/qtviewer/example.cmake/CMakeModules/: FindGRID.cmake  FindMINI.cmake
libmini/qtviewer/simple.cmake/: CMakeLists.txt  qtsimple.cpp  qtsimple.h  qtsimpleviewer.h  viewer.cpp  viewer.h
libmini/qtviewer/simple.cmake/CMakeModules/: FindGRID.cmake
libmini/qtviewer/simple.cmake/data/: EarthNight.db
libmini/tags/mini-10.0/tools/: Makefile.am  dbdump.cpp  dbgzip.cpp  raw2db.cpp
libmini/tags/mini-10.5/: CMakeLists.txt  README.html  database.cpp  libMini-config.cmake  lunaparse.cpp  lunascan.cpp  minibase.h  minibrick.cpp  minicam.cpp  minicrs.cpp  minicurve.cpp  minidyna.h  miniearth.cpp  miniearth.h  miniglobe.h  miniio.h  minikdtree.h  minilayer.h  mininodes.h  miniproj.cpp  minishader.h  minisort.h  ministrip.cpp  minitile.cpp  miniv3d.h  miniv4f.cpp  minivec.h  pnmbase.cpp
libmini/tags/mini-10.5/tools/: dbdump.cpp  test.cpp
libmini/tags/mini-10.9.7/mini/example.cmake/: CMakeLists.txt
libmini/tags/mini-11.3/tools/: Makefile.am  MiniMakefile
libmini/tags/mini-8.9/tools/: Makefile.am
libmini/tags/mini-9.8/: Makefile.am  README.html  curlbase.h  database.h  datacache.cpp  datacalc.cpp  datagrid.cpp  libMini-config.cmake  lunaparse.h  miniOGL.cpp  minibrick.h  minicoord.cpp  minidyna.h  miniearth.h  minilayer.cpp  minipoint.cpp  miniterrain.h  viewer.cpp
libmini/tags/qtviewer-2.4/simple.cmake/: CMakeLists.txt  viewer.cpp
(+1074 files in other folders)
