METASOURCES = AUTO

INCLUDES = $(STUTTGART_CFLAGS)

bin_PROGRAMS = Stuttgart

Stuttgart_LDADD = $(STUTTGART_LIBS)
Stuttgart_SOURCES = Stuttgart.cpp

EXTRA_DIST = data/Stuttgart.raw data/Stuttgart.fly \
	     README CMakeLists.txt build.sh        \
	     freeglut_static.lib MiniMakefile      \
	     Stuttgart.png Stuttgart.desktop
