METASOURCES = AUTO

INCLUDES = $(YUKON_CFLAGS)

bin_PROGRAMS = Yukon

Yukon_LDADD = $(YUKON_LIBS)
Yukon_SOURCES = Yukon.cpp

EXTRA_DIST = data/Yukon.fogmap.pgm                          \
	     data/Yukon.fogmap1.pgm data/Yukon.fogmap2.pgm  \
	     data/Yukon.map.pgm data/Yukon.texmap.ppm       \
	     README CMakeLists.txt build.sh                 \
	     freeglut_static.lib MiniMakefile               \
	     Yukon.png Yukon.desktop
