# cmake build file for libMini plotter
# (c) by Stefan Roettger

PROJECT(plotter)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

OPTION(BUILD_PLOTTER_APPS "Build applications." ON)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/plotter-config.cmake)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

IF (BUILD_PLOTTER_APPS)
   MAKE_PLOTTER_EXECUTABLE(example)
   MAKE_PLOTTER_EXECUTABLE(spiral)
   MAKE_PLOTTER_EXECUTABLE(scroll)
   MAKE_PLOTTER_EXECUTABLE(bounce)
   MAKE_PLOTTER_EXECUTABLE(koch)
   MAKE_PLOTTER_EXECUTABLE(fern)
   MAKE_PLOTTER_EXECUTABLE(julia)
ENDIF (BUILD_PLOTTER_APPS)

INSTALL(
   TARGETS ${PLOTTER_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/plotter
   )

IF (BUILD_PLOTTER_APPS)
   INSTALL(
      TARGETS example spiral scroll bounce koch fern julia
      RUNTIME DESTINATION bin
      )
ENDIF (BUILD_PLOTTER_APPS)
