# cmake build file for libMini plotter
# (c) by Stefan Roettger

PROJECT(plotter)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

OPTION(BUILD_PLOTTER_EXAMPLE "Build example application." ON)
OPTION(BUILD_PLOTTER_DEMOS "Build demo applications." ON)

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/plotter-config.cmake)

IF (BUILD_PLOTTER_EXAMPLE)
   MAKE_PLOTTER_EXECUTABLE(example)
ENDIF (BUILD_PLOTTER_EXAMPLE)

IF (BUILD_PLOTTER_DEMOS)
   ADD_SUBDIRECTORY(demo)
ENDIF (BUILD_PLOTTER_DEMOS)

INSTALL(
   TARGETS ${PLOTTER_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/plotter
   )
