# cmake build file for libMini plotter
# (c) by Stefan Roettger

IF (WIN32)
   SET(CMAKE_CONFIGURATION_TYPES "RelWithDebInfo" CACHE STRING "" FORCE)
ENDIF (WIN32)

PROJECT(plotter)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

OPTION(BUILD_PLOTTER_EXAMPLE "Build example application." ON)
OPTION(BUILD_PLOTTER_DEMOS "Build demo applications." ON)

# include plotter config file
INCLUDE(plotter-config.cmake)

# include plotter source list
INCLUDE(plotter.cmake)

ADD_LIBRARY(${PLOTTER_NAME} ${PLOTTER_SRCS} ${PLOTTER_HDRS})
SET_TARGET_PROPERTIES(${PLOTTER_NAME} PROPERTIES PUBLIC_HEADER "${PLOTTER_HDRS}" DEBUG_POSTFIX "d")
TARGET_LINK_LIBRARIES(${PLOTTER_NAME} ${MINI_LIBRARY})

IF (BUILD_PLOTTER_EXAMPLE)
   MAKE_PLOTTER_EXECUTABLE(example)
ENDIF (BUILD_PLOTTER_EXAMPLE)

IF (BUILD_PLOTTER_DEMOS)
   ADD_SUBDIRECTORY(demo)
ENDIF (BUILD_PLOTTER_DEMOS)

INSTALL(
   TARGETS ${PLOTTER_NAME}
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib
   PUBLIC_HEADER DESTINATION include/plotter
   )
