# cmake build file for libMini tools
# (c) by Stefan Roettger

PROJECT(${PROJECT_NAME}_tools)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

MAKE_MINI_EXECUTABLE(eval)
MAKE_MINI_EXECUTABLE(expr)

MAKE_MINI_EXECUTABLE(raw2db)
MAKE_MINISFX_EXECUTABLE(db2db)
MAKE_MINISFX_EXECUTABLE(dbgzip)
MAKE_MINISFX_EXECUTABLE(dbdump)
MAKE_MINISFX_EXECUTABLE(dds)

MAKE_MINI_EXECUTABLE(rek2raw)
MAKE_MINI_EXECUTABLE(rawquant)
MAKE_MINI_EXECUTABLE(raw2iso)
MAKE_MINI_EXECUTABLE(geo2ply)

MAKE_MINISFX_EXECUTABLE(test)
MAKE_MINI_EXECUTABLE(mpfptest)

INSTALL(
   TARGETS raw2db db2db dbgzip dbdump dds
   RUNTIME DESTINATION bin
   )
