# cmake build file

PROJECT(MyApp)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.3)

# dependencies

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

FIND_PACKAGE(GRID)
INCLUDE_DIRECTORIES(${GRID_INCLUDE_DIR})

FIND_PACKAGE(MINI)
INCLUDE_DIRECTORIES(${MINI_INCLUDE_DIR})

FIND_PACKAGE(libSquish)
INCLUDE_DIRECTORIES(${LIBSQUISH_INCLUDE_DIR})

FIND_PACKAGE(GDAL)
INCLUDE_DIRECTORIES(${GDAL_INCLUDE_DIR})

FIND_PACKAGE(ZLIB)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})

SET(QT_USE_QTOPENGL TRUE)
FIND_PACKAGE(QT4 COMPONENTS QtCore QtGui REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FIND_PACKAGE(OpenGL)

# header and module list

SET(LIB_HDRS
   # module headers
   mainwindow.h
   viewerwindow.h
   renderer.h
   viewer.h
   )

SET(LIB_SRCS
   # module sources
   mainwindow.cpp
   viewerwindow.cpp
   renderer.cpp
   viewer.cpp
   )

# library

SET(LIB_NAME ${PROJECT_NAME})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_LIBRARY(${LIB_NAME} ${LIB_SRCS} ${LIB_HDRS})

# executable

ADD_EXECUTABLE(example example.cpp)
TARGET_LINK_LIBRARIES(example
   ${LIB_NAME}
   ${GRID_LIBRARIES}
   ${MINI_LIBRARIES}
   ${LIBSQUISH_LIBRARIES}
   ${GDAL_LIBRARIES}
   ${ZLIB_LIBRARIES}
   ${QT_LIBRARIES}
   ${OPENGL_LIBRARIES}
   )
